# benchr

./: .gitignore  benchr.py  flake.nix  pyproject.toml  pyrightconfig.json
examples/: benchmark.py  benchr.py  example_old.py  lox.py  rcp.py
src/benchr/: __init__.py  __main__.py  _output.py  _parsers.py  _results.py  _suites.py  _types.py
tests/: conftest.py  test_executors.py  test_helpers.py  test_parsers.py  test_reporters.py  test_results.py  test_statistics.py  test_suites.py
