[project]
name = "benchr"
version = "0.1.0"
description = "A lightweight Python benchmarking framework"
requires-python = ">=3.12"
dependencies = [
    "tabulate",
]

[project.optional-dependencies]
pandas = ["pandas"]
dev = ["pytest", "pandas"]

[project.scripts]
benchr = "benchr.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
